# LoggerLauncher

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
src/: Logger.cpp  Logger.hpp  LoggerLauncher.cpp  LoggerLauncher.h  main.cpp
